--- a/index.html
+++ b/index.html
@@ -132,68 +132,72 @@
   </div>
 
 <script>
-  function toggleOtherModel() {
-    const modelSelect = document.getElementById('model-select');
-    const otherField = document.getElementById('other-model-container');
-    otherField.style.display = modelSelect.value === 'Other' ? 'block' : 'none';
-  }
+document.addEventListener("DOMContentLoaded", function () {
+  const form = document.getElementById("watch-sell-form");
 
-  function validateImages(input) {
-    const allowedTypes = ['image/jpeg', 'image/jpg', 'image/png', 'image/webp'];
-    for (const file of input.files) {
-      if (!allowedTypes.includes(file.type)) {
-        alert('Only image files are allowed (JPEG, PNG, WEBP).');
-        input.value = '';
-        break;
+  form.addEventListener("submit", async function (e) {
+    e.preventDefault();
+
+    const checkboxes = document.querySelectorAll('#complete-set-group input[type="checkbox"]');
+    const oneChecked = Array.from(checkboxes).some(checkbox => checkbox.checked);
+    if (!oneChecked) {
+      alert("Please select at least one option in the 'Complete Set' section.");
+      return;
+    }
+
+    const formData = new FormData(form);
+    const data = {};
+    formData.forEach((value, key) => {
+      if (data[key]) {
+        data[key] = [].concat(data[key], value);
+      } else {
+        data[key] = value;
+      }
+    });
+
+    const files = formData.getAll("photos[]");
+    data.fileCount = files.length;
+
+    for (let i = 0; i < files.length; i++) {
+      const file = files[i];
+      const base64 = await toBase64(file);
+      data[`file${i}`] = base64.split(",")[1];
+      data[`fileName${i}`] = file.name;
+      data[`fileType${i}`] = file.type;
+    }
+
+    const encoded = new URLSearchParams();
+    for (const key in data) {
+      if (Array.isArray(data[key])) {
+        data[key].forEach(val => encoded.append(key, val));
+      } else {
+        encoded.append(key, data[key]);
       }
     }
+
+    fetch("https://script.google.com/macros/s/AKfycbxtxTcC0s9Tu0DvP8uEdxdzeeQp3suQ3xXjGSUp91rMHHeL9NMHJOTrOGbUzXEBtCbg/exec", {
+      method: "POST",
+      body: encoded
+    })
+    .then(() => window.location.href = "thank-you.html")
+    .catch(() => alert("Something went wrong. Please try again."));
+  });
+
+  function toBase64(file) {
+    return new Promise((resolve, reject) => {
+      const reader = new FileReader();
+      reader.readAsDataURL(file);
+      reader.onload = () => resolve(reader.result);
+      reader.onerror = error => reject(error);
+    });
   }
 
-  document.addEventListener("DOMContentLoaded", function () {
-    const form = document.getElementById("watch-sell-form");
-
-    // Mostrar campo de Instagram si marca checkbox
-    const joinCheckbox = document.getElementById("join-community-checkbox");
-    const instaField = document.getElementById("instagram-field");
-    joinCheckbox.addEventListener("change", function () {
-      instaField.style.display = this.checked ? "block" : "none";
-    });
-
-    form.addEventListener("submit", function (e) {
-      e.preventDefault();
-
-      // Validar al menos un checkbox
-      const checkboxes = document.querySelectorAll('#complete-set-group input[type="checkbox"]');
-      const selectedBoxes = Array.from(checkboxes).filter(cb => cb.checked).map(cb => cb.value);
-      if (selectedBoxes.length === 0) {
-        alert("Please select at least one option in the 'Complete Set' section.");
-        return;
-      }
-
-      const formData = new FormData(form);
-
-      // Agregar valores de checkbox correctamente
-      selectedBoxes.forEach(value => {
-        formData.append("complete_set[]", value);
-      });
-
-      fetch("https://script.google.com/macros/s/AKfycbxtxTcC0s9Tu0DvP8uEdxdzeeQp3suQ3xXjGSUp91rMHHeL9NMHJOTrOGbUzXEBtCbg/exec", {
-        method: "POST",
-        body: formData
-      })
-      .then(res => {
-        if (res.ok) {
-          window.location.href = "thank-you.html";
-        } else {
-          alert("Something went wrong. Please try again.");
-        }
-      })
-      .catch(err => {
-        console.error("Submission error:", err);
-        alert("There was an error. Please try again.");
-      });
-    });
+  const joinCheckbox = document.getElementById("join-community-checkbox");
+  const instaField = document.getElementById("instagram-field");
+  joinCheckbox.addEventListener("change", function () {
+    instaField.style.display = this.checked ? "block" : "none";
   });
+});
 </script>
 </body>
 </html>
