--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="form-container">
-    <form id="watch-sell-form" action="https://script.google.com/macros/s/AKfycbxtxTcC0s9Tu0DvP8uEdxdzeeQp3suQ3xXjGSUp91rMHHeL9NMHJOTrOGbUzXEBtCbg/exec" method="POST" enctype="multipart/form-data">
+    <form id="watch-sell-form" enctype="multipart/form-data">
       <label>Name and Last Name</label>
       <input type="text" name="full_name" required />
 
