--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
   <div class="form-container">
-    <form id="watch-sell-form" enctype="multipart/form-data">
+    <form 
+      id="watch-sell-form" 
+      action="https://script.google.com/macros/s/AKfycbxtxTcC0s9Tu0DvP8uEdxdzeeQp3suQ3xXjGSUp91rMHHeL9NMHJOTrOGbUzXEBtCbg/exec" 
+      method="POST" 
+      enctype="multipart/form-data"
+    >
       <label>Name and Last Name</label>
       <input type="text" name="full_name" required />
 
@@ -131,44 +136,31 @@
     </form>
   </div>
 
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-  const form = document.getElementById("watch-sell-form");
-
-  form.addEventListener("submit", function (e) {
-    e.preventDefault();
-
-    const checkboxes = document.querySelectorAll('#complete-set-group input[type="checkbox"]');
-    const oneChecked = Array.from(checkboxes).some(checkbox => checkbox.checked);
-    if (!oneChecked) {
-      alert("Please select at least one option in the 'Complete Set' section.");
-      return;
+  <script>
+    function toggleOtherModel() {
+      const modelSelect = document.getElementById('model-select');
+      const otherField = document.getElementById('other-model-container');
+      otherField.style.display = modelSelect.value === 'Other' ? 'block' : 'none';
     }
 
-    const formData = new FormData(form);
-
-    fetch("https://script.google.com/macros/s/AKfycbxtxTcC0s9Tu0DvP8uEdxdzeeQp3suQ3xXjGSUp91rMHHeL9NMHJOTrOGbUzXEBtCbg/exec", {
-      method: "POST",
-      body: formData
-    })
-    .then(response => response.text())
-    .then(text => {
-      if (text.includes("window.location.href")) {
-        document.write(text); // Redirige correctamente
-      } else {
-        alert("Unexpected response: " + text);
+    function validateImages(input) {
+      const allowedTypes = ['image/jpeg', 'image/jpg', 'image/png', 'image/webp'];
+      for (const file of input.files) {
+        if (!allowedTypes.includes(file.type)) {
+          alert('Only image files are allowed (JPEG, PNG, WEBP).');
+          input.value = '';
+          break;
+        }
       }
-    })
-    .catch(() => alert("Something went wrong. Please try again."));
-  });
+    }
 
-  const joinCheckbox = document.getElementById("join-community-checkbox");
-  const instaField = document.getElementById("instagram-field");
-  joinCheckbox.addEventListener("change", function () {
-    instaField.style.display = this.checked ? "block" : "none";
-  });
-});
-</script>
-
+    document.addEventListener("DOMContentLoaded", function () {
+      const joinCheckbox = document.getElementById("join-community-checkbox");
+      const instaField = document.getElementById("instagram-field");
+      joinCheckbox.addEventListener("change", function () {
+        instaField.style.display = this.checked ? "block" : "none";
+      });
+    });
+  </script>
 </body>
 </html>
