--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
   <title>Sell Your Watch</title>
   <link rel="stylesheet" href="style.css" />
@@ -10,12 +10,8 @@
 </head>
 <body>
   <div class="form-container">
-    <form 
-      id="watch-sell-form" 
-      action="https://script.google.com/macros/s/AKfycbxtxTcC0s9Tu0DvP8uEdxdzeeQp3suQ3xXjGSUp91rMHHeL9NMHJOTrOGbUzXEBtCbg/exec" 
-      method="POST" 
-      enctype="multipart/form-data"
-    >
+    <form id="watch-sell-form" enctype="multipart/form-data">
+      <!-- Fields -->
       <label>Name and Last Name</label>
       <input type="text" name="full_name" required />
 
@@ -35,23 +31,11 @@
       <label>Model</label>
       <select name="model" id="model-select" required onchange="toggleOtherModel()">
         <option value="">Select</option>
-        <option>Cosmograph Daytona</option>
-        <option>Datejust</option>
-        <option>Lady‌‑Datejust</option>
-        <option>Day‌‑Date</option>
-        <option>Explorer</option>
-        <option>Explorer II</option>
-        <option>GMT‌‑Master II</option>
-        <option>Submariner</option>
-        <option>Sea‌‑Dweller</option>
-        <option>Deepsea</option>
-        <option>Yacht‌‑Master</option>
-        <option>Sky‌‑Dweller</option>
         <option>Oyster Perpetual</option>
         <option value="Other">Other</option>
       </select>
 
-      <div id="other-model-container" style="display:none; margin-top: 10px;">
+      <div id="other-model-container" style="display:none;">
         <label>Please specify model</label>
         <input type="text" name="other_model" />
       </div>
@@ -62,18 +46,6 @@
       <label>Year</label>
       <select name="year" required>
         <option value="">Select</option>
-        <option>2011</option>
-        <option>2012</option>
-        <option>2013</option>
-        <option>2014</option>
-        <option>2015</option>
-        <option>2016</option>
-        <option>2017</option>
-        <option>2018</option>
-        <option>2019</option>
-        <option>2020</option>
-        <option>2021</option>
-        <option>2022</option>
         <option>2023</option>
         <option>2024</option>
         <option>2025</option>
@@ -81,15 +53,11 @@
 
       <label>Complete Set?</label>
       <div class="checkbox-group" id="complete-set-group">
-        <label><input type="checkbox" name="complete_set[]" value="Outer Beige Box" /> Outer Beige Box</label>
-        <label><input type="checkbox" name="complete_set[]" value="Inner Green Box" /> Inner Green Box</label>
-        <label><input type="checkbox" name="complete_set[]" value="Warranty Card" /> Warranty Card</label>
-        <label><input type="checkbox" name="complete_set[]" value="Booklet & Holder" /> Booklet & Holder</label>
-        <label><input type="checkbox" name="complete_set[]" value="Warranty Manual" /> Warranty Manual</label>
-        <label><input type="checkbox" name="complete_set[]" value="Green Tag" /> Green Tag</label>
-        <label><input type="checkbox" name="complete_set[]" value="White Tag" /> White Tag</label>
-        <label><input type="checkbox" name="complete_set[]" value="Full Links" /> Full Links</label>
-        <label><input type="checkbox" name="complete_set[]" value="Watch Only" /> Watch Only</label>
+        <label><input type="checkbox" value="Outer Beige Box" /> Outer Beige Box</label>
+        <label><input type="checkbox" value="Inner Green Box" /> Inner Green Box</label>
+        <label><input type="checkbox" value="Warranty Card" /> Warranty Card</label>
+        <label><input type="checkbox" value="Booklet & Holder" /> Booklet & Holder</label>
+        <label><input type="checkbox" value="Warranty Manual" /> Warranty Manual</label>
       </div>
 
       <label>Condition</label>
@@ -97,70 +65,51 @@
         <option value="">Select</option>
         <option>Brand New Unused</option>
         <option>Mint/Slider</option>
-        <option>Lightly Used (- 10 times)</option>
-        <option>Used</option>
       </select>
 
       <label>Asking Price</label>
-      <textarea name="asking_price" required placeholder="Please let us know how much you're looking to sell this watch for" style="color: white; background-color: transparent;"></textarea>
+      <input name="asking_price" required />
 
-      <label>Upload Photos of watch and set (max 10)</label>
-      <small style="color: #bbb; display: block; margin-bottom: 5px;">
-        Only image files are accepted (.jpg, .jpeg, .png, .webp)
-      </small>
-      <input 
-        type="file" 
-        name="photos[]" 
-        accept="image/jpeg, image/jpg, image/png, image/webp" 
-        multiple 
-        required 
-        onchange="validateImages(this)" 
-      />
+      <label>Upload Photos</label>
+      <input type="file" name="photos" accept="image/*" multiple required />
 
-      <div style="margin-top: 20px;">
-        <label>
-          <input type="checkbox" id="join-community-checkbox" />
-          Would you like to join our community?
-        </label>
-        <p style="font-size: 0.9em; color: #bbb; margin-top: 5px;">
-          Be the first to receive exclusive offers, updates, and insider news about luxury watches.
-        </p>
+      <label>Instagram</label>
+      <input type="text" name="instagram_username" />
 
-        <div id="instagram-field" style="display: none; margin-top: 10px;">
-          <label>Enter your Instagram username</label>
-          <input type="text" name="instagram_username" placeholder="@example" style="color: white; background-color: transparent; font-style: italic;"/>
-        </div>
-      </div>
-
-      <button type="submit">Send Watch Info</button>
+      <button type="submit">Send</button>
     </form>
   </div>
 
-  <script>
-    function toggleOtherModel() {
-      const modelSelect = document.getElementById('model-select');
-      const otherField = document.getElementById('other-model-container');
-      otherField.style.display = modelSelect.value === 'Other' ? 'block' : 'none';
-    }
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  const form = document.getElementById("watch-sell-form");
 
-    function validateImages(input) {
-      const allowedTypes = ['image/jpeg', 'image/jpg', 'image/png', 'image/webp'];
-      for (const file of input.files) {
-        if (!allowedTypes.includes(file.type)) {
-          alert('Only image files are allowed (JPEG, PNG, WEBP).');
-          input.value = '';
-          break;
-        }
-      }
-    }
+  form.addEventListener("submit", async function (e) {
+    e.preventDefault();
 
-    document.addEventListener("DOMContentLoaded", function () {
-      const joinCheckbox = document.getElementById("join-community-checkbox");
-      const instaField = document.getElementById("instagram-field");
-      joinCheckbox.addEventListener("change", function () {
-        instaField.style.display = this.checked ? "block" : "none";
-      });
+    const formData = new FormData(form);
+
+    const checkboxes = document.querySelectorAll('#complete-set-group input[type="checkbox"]');
+    const selected = Array.from(checkboxes).filter(c => c.checked).map(c => c.value);
+    formData.append("complete_set_joined", selected.join(", "));
+
+    const response = await fetch("https://script.google.com/macros/s/AKfycbxtxTcC0s9Tu0DvP8uEdxdzeeQp3suQ3xXjGSUp91rMHHeL9NMHJOTrOGbUzXEBtCbg/exec", {
+      method: "POST",
+      body: formData
     });
-  </script>
+
+    const text = await response.text();
+    if (text.includes("window.location.href")) {
+      document.write(text);
+    } else {
+      alert("Unexpected response: " + text);
+    }
+  });
+
+  function toggleOtherModel() {
+    document.getElementById('other-model-container').style.display = document.getElementById('model-select').value === 'Other' ? 'block' : 'none';
+  }
+});
+</script>
 </body>
 </html>
